QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog

SVN TRUNK

- Enabling ALSA MIDI and/or JACK MIDI devices is now optional.

- Transparent JACK MIDI support is being introduced. (EXPERIMENTAL)

- Use standard dialog buttons as provided by QDialogButtonBox.

- Context menu is now also triggered when left-clicking on the
  system tray icon.

- Message box title confidence fix (whatever it be:)


0.0.1  2010-03-07  First public release.